# JEDi

./: README.md  pyproject.toml  requirements.txt
jedi/: JEDi.py  __init__.py  utils.py
tests/: test_JEDi.py  test_jepa_loading.py
tutorials/: JEDi_tutorial.ipynb
videojedi/: JEDi.py  V_JEPA.py  V_JEPA_utils.py  mmd_polynomial.py  utils.py
